--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,40 @@
 h1  {
 font-family: sans-serif;
 font-size: 60px;
-font-weight: 200;
-font-variant: small-caps;
+font-weight: 100;
+color: white;
 }
 
 h2{
-
+  font-family: sans-serif;
+  font-size: 45px;
+  font-weight: 100;
+  color: rgb(223, 63, 238);
+  }
+  
+.currently {
+  font-style: oblique;
+  font-variant: small-caps;
 }
 
-h3  {
+  h3  {
+  font-family: sans-serif;
+  font-size: 45px;
+  color: rgb(91, 43, 224);
+  }
+  
+  body  {
+  background-color: black;
+  }
 
-}
-
-body  {
-
-}
+  .about-box  {
+    border: 1px blue;
+    padding: 20px;
+    background-color:cornflowerblue;
+    display: block;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    width: 75%;
+    box-sizing: border-box;
+  }
