--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 h1  {
-font-family: sans-serif;
-font-size: 60px;
-font-weight: 100;
-color: white;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  color: white;
 }
 
 h2{
+  text-align: center;
   font-family: sans-serif;
   font-size: 45px;
   font-weight: 100;
@@ -13,28 +15,44 @@ h2{
   }
   
 .currently {
+  font-size: 50px;
   font-style: oblique;
   font-variant: small-caps;
 }
 
-  h3  {
+h3  {
   font-family: sans-serif;
   font-size: 45px;
   color: rgb(91, 43, 224);
-  }
-  
-  body  {
-  background-color: black;
-  }
+}
 
-  .about-box  {
-    border: 1px blue;
-    padding: 20px;
-    background-color:cornflowerblue;
-    display: block;
-    margin: auto;
-    margin-top: 15px;
-    margin-bottom: 30px;
-    width: 75%;
-    box-sizing: border-box;
-  }
+h4  {
+  font-family: sans-serif;
+  font-size: 45px;
+  color: rgb(91, 43, 224);
+}
+  
+body  {
+  background-color: black;
+  line-height: 20px;
+}
+
+.self-portrait  {
+  margin: auto;
+  float: l;
+  width: 50%;
+  height: auto;
+  display: block;
+}
+
+.about-box  {
+  border: 1px blue;
+  padding: 20px;
+  background-color:cornflowerblue;
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  width: 75%;
+  box-sizing: border-box;
+}
