Add font-family: monospace, font-size: 11pt, color rgb(57,0,110) to class about-box in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ body  {
 
 .about-box  {
   border: 1px solid blue;
-  padding: 20px;
+  padding: 30px;
   background-color:cornflowerblue;
   display: block;
   margin: auto;
@@ -107,6 +107,9 @@ body  {
   margin-bottom: 30px;
   width: 75%;
   box-sizing: border-box;
+  font-family: monospace;
+  font-size: 11pt;
+  color: rgb(57, 0, 110);
 }
 .experience-box  {
   border: 2px solid rgb(255, 0, 242);
@@ -116,7 +119,7 @@ body  {
   margin: auto;
   margin-top: 15px;
   margin-bottom: 30px;
-  width: 70%;
+  width: 75%;
   box-sizing: border-box;
 }
 
@@ -149,3 +152,4 @@ body  {
   box-sizing: content-box;
   font-family: monospace;
 }
+
