--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body  {
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 15px;
-  border: 4px cornflowerblue;
+  border: 2px solid cornflowerblue;
   background-color: rgb(159, 79, 233);
   box-sizing: border-box;
   color: rgb(242, 255, 193);
@@ -78,11 +78,10 @@ body  {
   width: 33.33%;
   height: 450px;
   float: left;
-  column-rule: 4px double cyan;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 15px;
-  border: 4px cornflowerblue;
+  border: 2px solid cornflowerblue;
   background-color: rgb(133, 79, 233);
   box-sizing: border-box;
   color: rgb(242, 255, 193);
@@ -98,7 +97,7 @@ body  {
 }
 
 .about-box  {
-  border: 1px solid blue;
+  border: 2px solid rgb(255, 0, 242);
   padding: 30px;
   background-color:cornflowerblue;
   display: block;
@@ -141,7 +140,7 @@ body  {
 }
 
 .work-box {
-  border: 5px solid rgb(255, 0, 242);
+  border: 3px solid rgb(255, 0, 242);
   padding: 15px;
   background-color:rgb(234, 180, 255);
   display: block;
