--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,10 @@ h2{
 
 h3  {
   font-family: sans-serif;
-  font-size: 45px;
+  font-size: 55px;
+  font-weight: 100;
+  font-style: oblique;
+  text-align: center;
   color: rgb(91, 43, 224);
 }
 
@@ -33,11 +36,12 @@ h4  {
 }
 
 h5  {
-  font-family: monospace;
+  font-family: sans-serif;
   font-size: 20px;
   color: antiquewhite;
-  font-weight: 100;
+  font-weight: 200;
   text-align: center;
+  font-style: oblique;
 }
 
 h6  {
@@ -69,8 +73,8 @@ body  {
   border: 2px solid cornflowerblue;
   background-color: rgb(159, 79, 233);
   box-sizing: border-box;
-  color: rgb(242, 255, 193);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(193, 251, 255);
+  font-family: monospace;
 }
 
 .column-2  {
@@ -84,8 +88,8 @@ body  {
   border: 2px solid cornflowerblue;
   background-color: rgb(133, 79, 233);
   box-sizing: border-box;
-  color: rgb(242, 255, 193);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(185, 233, 255);
+  font-family: monospace;
 }
 
 .space  {
