--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h2{
 h3  {
   font-family: sans-serif;
   font-size: 55px;
-  font-weight: 100;
+  font-weight: 800;
   font-style: oblique;
   text-align: center;
   color: rgb(91, 43, 224);
@@ -31,13 +31,16 @@ h3  {
 
 h4  {
   font-family: sans-serif;
-  font-size: 45px;
+  font-size: 60px;
+  font-weight: 800;
+  font-style: oblique;
+  text-align: center;
   color: rgb(91, 43, 224);
 }
 
 h5  {
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   color: antiquewhite;
   font-weight: 200;
   text-align: center;
@@ -47,6 +50,7 @@ h5  {
 h6  {
   font-family: monospace;
   font-size: 14px;
+  color: rgb(122, 0, 71);
 }
 body  {
   background-color: black;
@@ -55,7 +59,6 @@ body  {
 
 .self-portrait  {
   margin: auto;
-  float: l;
   width: 50%;
   height: auto;
   display: block;
@@ -66,7 +69,6 @@ body  {
   width: 33.33%;
   height: 450px;
   float: left;
-  column-rule: 4px double cyan;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 15px;
